<resources>
    <string name="app_name">Image Upload</string>
    <string name="upload_photo">Upload</string>
    <string name="save">Save</string>
    <string name="no_gps">No access to GPS</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="position">Position:</string>
    <string name="unknown">unknown</string>
    <string name="sending_gps">Sending GPS coordinates..."</string>
    <string name="server_response">Server response: </string>
    <string name="note">poznámka Bosch: </string>
    <string name="comment">poznámka konkurence: </string>
    <string name="login">Login</string>
    <string name="relogin">Update/Login</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="upload_record">Upload a record</string>
    <string name="saved_records">Saved records</string>
    <string name="photodot">Photo:</string>
    <string name="shop">Shop:</string>
    <string name="use_gps">Use GPS</string>
    <string name="tourplan">Tourplán</string>
    <string name="order">Objednávka</string>
    <string name="delete">Delete</string>
</resources>
