<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_image"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cz.bosh.imageupload.ImageActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>
                <TextView
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/longitude"
                    />
                <TextView
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/image_longitude"
                    android:text="@string/unknown"
                />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/latitude"
                    />
                <TextView
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/image_latitude"
                    android:text="@string/unknown"
                />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accuracy"
                    />
                <TextView
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/image_accuracy"
                    android:text="@string/unknown"
                />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="obchod:"
                    />
                <Spinner
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/image_shop"
                    android:text="@string/unknown"
                    />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note"
                    />
                <EditText
                    android:lines="1"
                    android:maxLines="1"
                    android:minLines="1"
                    android:inputType="text"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/image_note"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note"
                    />

                <EditText
                    android:lines="1"
                    android:maxLines="1"
                    android:minLines="1"
                    android:inputType="text"
                    android:layout_weight="1"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/image_note2"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="obrázek"
                    />

                <ImageView
                    android:layout_margin="10dp"
                    android:scaleType="fitCenter"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_launcher"
                    />
            </TableRow>

            <TableRow
                android:gravity="center"
                >
                <Button
                    android:layout_span="2"
                    android:id="@+id/image_upload_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_photo" />

            </TableRow>
        </TableLayout>


    </ScrollView>

    <ProgressBar
        android:id="@+id/image_progress"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@android:style/Widget.ProgressBar.Large"
        android:layout_marginRight="5dp" />


</FrameLayout>
